--- a/eureka-application/src/main/resources/application.yml
+++ b/eureka-application/src/main/resources/application.yml
@@ -8,7 +8,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 spring:
   application:
     name: summer-eureka-server
